fix: Add opacity and visibility properties to mobile menu so user cannot tab through the mobile menu while it is not showing

--- a/BloomfieldGreenhouse/css/styles.css
+++ b/BloomfieldGreenhouse/css/styles.css
@@ -143,6 +143,8 @@ header {
     overflow-x: hidden;
     padding-top: 60px;
     transition: all .4s;
+    opacity: 0;
+    visibility: hidden;
 }
 
 
